<resources>
    <string name="app_name">My Wallpaper</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="do_you_want_to_delete">Do you want to delete these wallpapers?</string>
    <string name="settings">Settings</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="auto_change">Auto change</string>
    <string name="sometimes">Once a day</string>
    <string name="usually">Every hour</string>
    <string name="frequently">Every 15 mins.</string>
    <string name="change_wallpaper_automatically">Change wallpaper automatically</string>
    <string name="wallpaper_is_changed">Wallpaper is changed.</string>
    <string name="close">Close</string>
    <string name="discovery_wallpapers">Discovery wallpapers</string>
    <string name="start_collecting_here">Start collecting here!</string>
    <string name="keep_your_favorite_wallpapers">Keep your favorite wallpapers.</string>
    <string name="downloading_new_wallpaper">Downloading new wallpaper…</string>
    <string name="download_complete">Download complete</string>
    <string name="failed_to_download">Failed to download</string>
    <string name="welcome">Welcome!</string>
    <string name="collect_your_favorite_wallpapers">Collect your favorite wallpapers.</string>
    <string name="new_wallpaper_is_added">New wallpaper is added.</string>
    <string name="get_collecting_wallpapers">Get collecting wallpapers.</string>
    <string name="you_can_get_a_image_as_wallpaper_from_gallery_using_share">You can get a image as wallpaper from Gallery using share.</string>
    <string name="download_from_the_web">Download from the web.</string>
    <string name="you_can_download_a_wallpaper_using_share_image_url_from_the_web">You can download a wallpaper using share image URL from the web.</string>
    <string name="start">Start</string>
    <string name="change_automatically">Change automatically.</string>
    <string name="you_can_change_a_wallpaper_automatically_by_below_settings">You can change a wallpaper automatically by below settings.</string>
    <string name="synchronize_wallpapers_via_google_drive">Synchronize wallpapers via Google Drive.</string>
    <string name="backup_and_restore"><![CDATA[Backup & restore]]></string>
    <string name="set_live_wallpaper">Set Live wallpaper</string>
    <string name="it_needs_to_set_live_wallpaper">It needs to set live wallpaper.</string>
    <string name="set">Set</string>
    <string name="backgrounds_are_provided_through_live_wallpaper">Backgrounds are provided through live wallpaper.</string>
    <string name="live_wallpaper">Live wallpaper</string>
    <string name="completed">Completed</string>
    <string name="live_wallpaper_needs_to_be_set">List wallpaper needs to be set. It will support to change wallpaper with live wallpaper.</string>
</resources>
