<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fragment="com.fin10.android.mywallpaper.settings.SettingsFragment"
    >
    <PreferenceCategory android:title="@string/wallpaper">

        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_key_auto_change"
            android:summary="@string/change_wallpaper_automatically"
            android:title="@string/auto_change"
            />

        <com.fin10.android.mywallpaper.settings.PeriodPreference
            android:defaultValue="0"
            android:dependency="pref_key_auto_change"
            android:key="pref_key_auto_change_period"
            android:layout="@layout/preference_auto_change_period"
            />

    </PreferenceCategory>
</PreferenceScreen>