<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    >

    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:max="2"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        tools:ignore="RelativeOverlap"
        >

        <TextView
            android:id="@+id/sometimes_view"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sometimes"
            android:textAllCaps="true"
            android:textColor="@color/primary_text"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/usually_view"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/usually"
            android:textAllCaps="true"
            android:textColor="@color/primary_text"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/frequently_view"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:text="@string/frequently"
            android:textAllCaps="true"
            android:textColor="@color/primary_text"
            android:textSize="12sp"
            />
    </RelativeLayout>
</LinearLayout>