<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".tutorial.TutorialActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        >

        <TextView
            style="@style/HeadlineText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal|bottom"
            android:lines="2"
            android:text="@string/live_wallpaper"
            android:textColor="@android:color/white"
            />

        <TextView
            android:id="@+id/headline_text"
            style="@style/HeadlineDescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:gravity="center_horizontal"
            android:lines="2"
            android:text="@string/backgrounds_are_provided_through_live_wallpaper"
            android:textColor="@android:color/white"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:paddingTop="20dp"
        >

        <Button
            android:id="@+id/set_live_wallpaper_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/rounded_background"
            android:elevation="2dp"
            android:fontFamily="sans-serif-light"
            android:onClick="onClick"
            android:text="@string/set_live_wallpaper"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            />
    </RelativeLayout>
</LinearLayout>