<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".tutorial.TutorialActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        >

        <TextView
            style="@style/HeadlineText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal|bottom"
            android:lines="2"
            android:text="@string/change_automatically"
            android:textColor="@android:color/white"
            />

        <TextView
            android:id="@+id/headline_text"
            style="@style/HeadlineDescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:gravity="center_horizontal"
            android:lines="2"
            android:text="@string/you_can_change_a_wallpaper_automatically_by_below_settings"
            android:textColor="@android:color/white"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:paddingTop="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:id="@+id/auto_change_layout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="4dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/auto_change"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    />

                <Switch
                    android:id="@+id/auto_change_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    />

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/background"
                app:cardElevation="2dp">

                <include layout="@layout/preference_auto_change_period"/>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <Button
            android:id="@+id/start_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/rounded_background"
            android:elevation="2dp"
            android:fontFamily="sans-serif-light"
            android:onClick="onClick"
            android:text="@string/start"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            />
    </RelativeLayout>
</LinearLayout>